# chatgpt-voice

./: .gitignore  CONTEXT-BEFORE-EXTRACT.md  IMPLEMENTATION_GUIDE.md  LEGAL.md  README.md  SECURITY.md  WHY_THIS_APPROACH.md  daemon.py  install_startup.ps1  pyproject.toml  setup.sh  setup_windows.ps1  start_daemon.ps1  toggle
chatgpt_voice/: __init__.py  __main__.py  config.py  daemon.py  ipc.py  platform_utils.py  visualizer.py
